--- a/px-handle-multi.html
+++ b/px-handle-multi.html
@@ -9,12 +9,13 @@
 
 <!--
 Handle Element expected to be used in px-slider
+
 ##### Usage
 
 <px-handle-multi id="myID" class="visuallyHidden" handle-track-event-name="handleTrackStart" on-track="handleTrackStart" handle-rotate></px-handle-multi>
 
 
-@element px-slider
+@element px-handle-multi
 @blurb Handle Element expected to be used in px-slider
 @homepage index.html
 @demo demo.html
@@ -22,10 +23,6 @@ Handle Element expected to be used in px-slider
 <dom-module id="px-handle-multi">
   <link rel="import" type="css" href="css/px-handle.css" />
   <template>
-    <!-- <div id="multiHandleSVG">
-      <span id="handleTarget">
-      </span>
-    </div> -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 21" id="multiHandleSVG">
       <g id="handleTarget" on-down="handleDown" on-up="handleUp" on-track="handleTrack" tabindex="-1">
         <path id="handleDropShadow" d="M0.76,12.26V4.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
@@ -47,7 +44,7 @@ Handle Element expected to be used in px-slider
     properties: {
       /**
        *
-       * Name of the event that will be raised when the handle DOWN and dragged.
+       * Name of the event that will be raised when the handle is DOWN and dragged.
        *
        */
       tracking: {
@@ -100,7 +97,9 @@ Handle Element expected to be used in px-slider
     },
     /**
      * When the handle is clicked on for a drag, adds class for style
-     *
+     * @method {_trackingChanged}
+     * @param {newValue}
+     * @param {oldValue}
      */
     _trackingChanged: function(newValue, oldValue) {
       // toggleClass uses classlist which does not work with SVG on IE
@@ -111,6 +110,8 @@ Handle Element expected to be used in px-slider
     /**
      * When the handle is clicked on, fire event
      *
+     * @method {handleDown}
+     * @param {event}
      */
     handleDown: function(event) {
       this._setTracking(true);
@@ -119,6 +120,8 @@ Handle Element expected to be used in px-slider
     /**
      * When the handle is let go (after being clicked on), fire event
      *
+     * @method {handleUp}
+     * @param {event}
      */
     handleUp: function(event) {
       this._setTracking(false);
@@ -127,6 +130,8 @@ Handle Element expected to be used in px-slider
     /**
      * When the handle is moving, fire event
      *
+     * @method {handleTrack}
+     * @param {event}
      */
     handleTrack: function(event) {
       if (this.tracking) {
@@ -136,6 +141,8 @@ Handle Element expected to be used in px-slider
     /**
      * Sets styles on handle when we know if it is a start or end handle
      *
+     * @method {_rotateHandle}
+     * @param {bool}
      */
     _rotateHandle: function(bool){
       // toggleClass uses classlist which does not work with SVG on IE
@@ -153,6 +160,11 @@ Handle Element expected to be used in px-slider
     /**
      * Sets the classes on SVG elems
      * toggleClass uses classlist which does not work with SVG on IE
+     *
+     * @method {_setClassOnSVG}
+     * @param {bool}
+     * @param {elem}
+     * @param {classname}
      */
     _setClassOnSVG: function(elem,bool,classname){
       var existingClass = elem.getAttribute('class');
@@ -164,7 +176,7 @@ Handle Element expected to be used in px-slider
         var classArr = existingClass.split(' ');
         var i = classArr.indexOf(classname);
 
-        if(i != -1) { classArr.splice(i, 1); }
+        if(i !== -1) { classArr.splice(i, 1); }
 
         elem.setAttribute('class',classArr.join(' '));
       }
