--- a/test/fixture.html
+++ b/test/fixture.html
@@ -14,15 +14,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>seed-element</title>
 
-    <script src="../../webcomponentsjs/webcomponents.min.js"></script>
-
-    <!-- Step 1: import the element to test -->
-    <link rel="import" href="../px-slider.html">
-</head>
+    <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
+    <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <!-- web-component-tester automatically provides local copy of brower.js below
+         for any URL ending with "/web-component-tester/browser.js"
+         when wct is run from the command line -->
+    <script src="../web-component-tester/browser.js"></script>
+    <link rel="import" href="../px-slider.html" />
+    <!-- Retain this link for px-theme.html -->
+    <!-- For some reason px-theme is needed for WCT to run without some errors -->
+    <link rel="import" href="../../px-theme/px-theme.html"/>
+    <script src="px-slider-base-tests.js"></script>
 <body>
 
 <!-- You use the document as a place to set up your fixtures. -->
-<px-slider counter-value="1">
+<px-slider value="10" id="fixture">
     &hearts;
 </px-slider>
 
