--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@
       </px-slider>
       <h4>Range</h4>
       <div style="width: 600px;">
-        <px-slider start-value="20" end-value="40" min="0" max="60">
+        <px-slider value="2" start-value="20" step="2" end-value="40" min="0" max="60">
         </px-slider>
       </div>
       <h4>Step = 50</h4>
