--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="apiContainer">
             <div class="flex flex--col api u-mt++" >
               <div>
-                <!-- <px-api-viewer source="px-slider"></px-api-viewer> -->
+                <px-api-viewer source="px-slider"></px-api-viewer>
               </div>
             </div>
           </div>
