fixed wrong link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- discription -->
     <div class="hero u-p++ text--shadow">
-      <a class="actionable flex flex--right flex--middle" href="https://github.com/PredixDev/px-app-nav" target="_blank"><iron-icon class="menu__open" icon="fa:fa-github"></iron-icon>View on Github</a>
+      <a class="actionable flex flex--right flex--middle" href="https://github.com/PredixDev/px-slider" target="_blank"><iron-icon class="menu__open" icon="fa:fa-github"></iron-icon>View on Github</a>
   		<h1 class="delta">px-slider</h1>
   		<p>
   			The	<code>px-slider</code> component provides a progress bar, which can optionally include stripes and an animation effect.
