--- a/index.html
+++ b/index.html
@@ -139,17 +139,8 @@ window.addEventListener('WebComponentsReady', function() {
       max = ["100","100"],
       step = ["0.01","5"],
       startValue = ["","20"],
-      endValue = ["","80"];
-
+      endValue = ["","80"],
       optionsArray = [
-        {
-          "value":value[1],
-          "min":min[1],
-          "max":max[1],
-          "step":step[1],
-          "startValue":startValue[1],
-          "endValue":endValue[1]
-        },
         {
           "value":value[0],
           "min":min[0],
